<resources>
    <string name="app_name">Easy Check</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_welcome">Bienvenido</string>
    <string name="login_init_sesion">INICIA SESIÓN</string>
    <string name="login_hint_username">No. Celular</string>
    <string name="login_hint_pass">Contraseña</string>
    <string name="login_btn">INICIAR</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_configuration">Administración</string>
    <string name="menu_notification">Notificaciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_register">Registrarme</string>
    <string name="register_code_title">INGRESA TU CÓDIGO</string>
    <string name="notification_default_title">Mensaje txt RT</string>
    <string name="notification_detault_message_one">Código de verificación de RocketTeam</string>
    <string name="notification_detault_message_two">Ingresa: 18273</string>
    <string name="defaul_number">1</string>
    <string name="splash_title">ROCKET TEAM</string>
    <string name="register_title">REGISTRAME</string>
    <string name="register_account_title">Bienvenido a RocketTeam\nPor favor ingresa tu cuenta</string>
    <string name="register_account_invite">INVITADO</string>
    <string name="register_account_btn">REGISTRA TU CUENTA</string>
    <string name="register_account_new_btn">CREA UNA CUENTA</string>
    <string name="nav_header_default_name">JOHN DOE</string>
    <string name="drawerOpen">Open</string>
    <string name="drawerClose">Close</string>
    <string name="home_deposit">Depósito</string>
    <string name="home_retire">Retiro</string>
    <string name="home_abono">Abono</string>
    <string name="home_credit">Crédito</string>
    <string name="home_air_time">Tiempo Aire</string>
    <string name="home_payment">Pago de\nServicios</string>
    <string name="home_comprobantes">Comprobantes</string>
    <string name="home_money">Dinero Express</string>
</resources>
