<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".HomeFragment">


    <TextView
            android:text="@string/home_comprobantes"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeVouchers"
            style="@style/TextViewMenuWhite"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/homeExpress"
    />
    <TextView
            android:text="@string/home_money"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeExpress"
            style="@style/TextViewMenuGray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeVouchers"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/home_air_time"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeAirTime"
            style="@style/TextViewMenuGray"
            app:layout_constraintBottom_toTopOf="@+id/homeVouchers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/homeServicesPayment"/>
    <TextView
            android:text="@string/home_payment"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeServicesPayment"
            style="@style/TextViewMenuWhite"
            android:maxLines="@integer/two_lines"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/homeExpress"
            app:layout_constraintStart_toEndOf="@+id/homeAirTime"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/home_abono"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeMoneyCredit"
            style="@style/TextViewMenuWhite"
            app:layout_constraintBottom_toTopOf="@+id/homeAirTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/homeCredit"
    />
    <TextView
            android:text="@string/home_credit"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeCredit"
            style="@style/TextViewMenuGray"
            app:layout_constraintBottom_toTopOf="@+id/homeServicesPayment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/homeMoneyCredit"
            app:layout_constraintHorizontal_bias="0.5"/>
    <TextView
            android:text="@string/home_deposit"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeDeposit"
            style="@style/TextViewMenuGray"
            app:layout_constraintBottom_toTopOf="@+id/homeMoneyCredit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/homeWithdrawal"/>
    <TextView
            android:text="@string/home_retire"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:id="@+id/homeWithdrawal"
            style="@style/TextViewMenuWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/homeCredit"
            app:layout_constraintStart_toEndOf="@+id/homeDeposit"
            app:layout_constraintHorizontal_bias="0.5"/>
</androidx.constraintlayout.widget.ConstraintLayout>