<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".register.RegisterActivity">

    <TextView
            android:text="@string/register_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="150dp"
            android:focusable="true"
            style="@style/TextViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="@dimen/size_code"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:id="@+id/editText3"
            android:maxLength="@integer/length_celphone"
            android:hint="@string/login_hint_username"
            android:layout_marginEnd="32dp"
            style="@style/EditTextBase"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintEnd_toEndOf="parent"
    />


    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerBtn"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_btn"
            android:layout_marginTop="32dp"
            style="@style/ButtonBase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText3"
    />


</androidx.constraintlayout.widget.ConstraintLayout>