<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".register.RegisterAccountActivity">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/logo_b_lanco"
            android:id="@+id/imageView"
            android:layout_marginTop="120dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/register_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/normal_font"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    <Button
            android:text="@string/register_account_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerAccountAdd"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"
            style="@style/ButtonBase"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
    <Button
            android:text="@string/register_account_new_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerAccountNew"
            android:layout_marginTop="16dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            style="@style/ButtonBase"
            app:layout_constraintTop_toBottomOf="@+id/registerAccountAdd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
    />
    <TextView
            android:text="@string/register_account_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/registerAccountInvite"
            android:layout_marginTop="32dp"
            android:textColor="@color/colorTextGray"
            android:textSize="@dimen/normal_font"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintTop_toBottomOf="@+id/registerAccountNew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>