<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorWhite"
        tools:context=".register.RegisterCodeFullActivity">

    <include layout="@layout/notification_layout"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
            android:text="@string/register_code_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:layout_marginTop="150dp"
            android:focusable="true"
            style="@style/TextViewTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
            android:layout_width="@dimen/size_code"
            android:layout_height="@dimen/size_code"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:id="@+id/editText3"
            android:text="@string/defaul_number"
            style="@style/EditTextCodeFull"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/editText5"
    />

    <EditText
            android:layout_width="@dimen/size_code"
            android:layout_height="@dimen/size_code"
            android:layout_marginTop="24dp"
            android:id="@+id/editText7"
            style="@style/EditTextCodeFull"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/editText5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/editText8"/>

    <EditText
            android:layout_width="@dimen/size_code"
            android:layout_height="@dimen/size_code"
            android:id="@+id/editText5"
            android:layout_marginTop="24dp"
            style="@style/EditTextCodeFull"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/editText3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/editText7"/>


    <EditText
            android:layout_width="@dimen/size_code"
            android:layout_height="@dimen/size_code"
            android:id="@+id/editText8"
            android:layout_marginTop="24dp"
            style="@style/EditTextCodeFull"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/editText7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toStartOf="@+id/editText6"/>

    <EditText
            android:layout_width="@dimen/size_code"
            android:layout_height="@dimen/size_code"
            android:id="@+id/editText6"
            android:layout_marginEnd="32dp"
            android:layout_marginTop="24dp"
            style="@style/EditTextCodeFull"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            app:layout_constraintStart_toEndOf="@+id/editText8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
    />
    <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/registerCodeFullBtn"
            android:layout_marginTop="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/login_btn"
            style="@style/ButtonBase"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editText7"
    />

</androidx.constraintlayout.widget.ConstraintLayout>